tests/fixtures/invalid/int_lt_list.py
# Cannot compare with < Int and List[int]
x: bool = 1 < [1, 2, 3]
